# etl-ruptura-zero

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: ruptura_estoque.csv  ruptura_estoque_vendas.csv
data/raw/: ruptura_database.xlsx
notebooks/: etl_validacao_motherduck.ipynb
references/: fluxograma.md
ruptura_zero/: factory.py  manager.py  pipeline.py
ruptura_zero/extractor/: excel_extractor.py
ruptura_zero/loader/: data_loader.py
ruptura_zero/protocols/: data_persistence.py  extractor.py  loader.py  transformer.py
ruptura_zero/services/: data_cleaning_service.py  data_transforming_service.py
ruptura_zero/transformer/: cleaner.py  data_cleaning_schemas.py  data_merge.py  pandera_schemas.py
ruptura_zero/utilities/: brazilian_states.py  client_type.py  configurations.py  data_persistence.py  merge_how_options.py
