[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-ruptura-zero"
version = "0.1.0"
authors = [
  { name="Alexsander Lopes Camargos", email="alexcamargos@gmail.com" },
]
description = "Análise de dados de vendas e estoque para identificar as causas da ruptura e gerar insights para otimização do negócio."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["data analysis", "etl", "sales", "inventory", "business intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandera>=0.26.1",
]

[project.urls]
"Homepage" = "https://github.com/alexcamargos/etl-ruptura-zero"
"Bug Tracker" = "https://github.com/alexcamargos/etl-ruptura-zero/issues"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.6",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

# Configuração da ferramenta de linting e formatação (Ruff)
[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
